--- a/index.ipynb
+++ b/index.ipynb
@@ -261,11 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Thailand')\n"
+    "countries.append('Thailand')\n",
+    "\n"
    ]
   },
   {
