automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -341,16 +341,17 @@
        " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
-       " 'USA',\n",
+       " 'New Mexico',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
-       " 'Malta']"
+       " 'Malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
